# yt-dlp-python-gui

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  resources_rc.py  ui_about.py  ui_main.py  ui_main__big_ui.py  ui_standart_size_main.py  versions.json
ui/: 9px_font_main.ui  about.ui  main.ui  main__big_ui.ui  resources.qrc  standart_size_main.ui
